fixed waybar icons and added basic wofi config

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -30,14 +30,14 @@
 },
 
 "clock": {
-"format": "{:%a %b %d %OI:%M%p}",
+"format": "{:%a %b %d %I:%M%p}",
 "tooltip": false
 },
 
 "network": {
-"format-wifi" : "{bandwidthDownBits}",
-"format-ethernet": "{bandwidthDownBits}",
-"format-disconnected" : "No Network",
+"format-wifi" : "\udb82\udd22 {bandwidthDownBits}",
+"format-ethernet": "\udb80\ude00 {bandwidthDownBits}",
+"format-disconnected" : "\udb82\udd2d No Network",
 "interval": 5,
 "tooltip": false
 },
@@ -45,7 +45,7 @@
 "pulseaudio": {
 "scroll-step": 5,
 "max-volume": 150,
-"format": "{volume}%",
+"format": "{icon} {volume}%",
 "format-bluetooth": "{icon} {volume}%",
 "format-icons": ["", "", " "],
 "nospacing": 1,
@@ -56,7 +56,7 @@
 
 
 "custom/power": {
-    "format" : " ",
+    "format" : "\u23fb",
         "tooltip": false,
         "menu": "on-click",
         "menu-file": "~/.config/waybar/power_menu.xml",
